changed the navigation style t o link to the right files, updated the CSS and updated the blog

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ vimeo: vimeo.com
 youtube: youtube.com
 
 permalink: /:categories/:title
+permalink: /blog/:year/:month/:day/:title
 
 categories: "tutorials", "cheatsheets", "blog"
 
