updated the blog generator again and the categories in both the posts, categorie generator and yaml file

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ permalink: /blog/:year/:month/:day/:title
 categories: 
   - tutorials
   - cheatsheets
-  - general tech
+  - core basics
 
 tags: ["Git"]
 
