--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: /rbla
 vimeo: vimeo.com
 youtube: youtube.com
 
-permalink: /:categories/:title
+permalink: /blog/:categories/:title
 permalink: /blog/:year/:month/:day/:title 
 
 categories: 
@@ -21,4 +21,7 @@ gems: ['jekyll/itafroma/archive']
 archive:
   layout: archive
   path: /blog/
-  title: Blog Archive
+  title: Blog Archive 
+  
+paginate: 5
+paginate_path: "blog/page:num"
