--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: /rbla
 vimeo: vimeo.com
 youtube: youtube.com
 
-permalink: /blog/:categories/:title
+# permalink: /blog/:categories/:title
 permalink: /blog/:year/:month/:day/:title 
 
 categories: 
