--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ name: RailsBridge LA
 markdown: redcarpet
 pygments: true
 baseurl: /rbla
+category_dir: /rbla
 
 vimeo: vimeo.com
 youtube: youtube.com
