--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ markdown: redcarpet
 pygments: true
 baseurl: /rbla
 category_dir: /categories
+url: http://localhost:4000/
 
 vimeo: vimeo.com
 youtube: youtube.com
