--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@ url: http://localhost:4000/
 vimeo: vimeo.com
 youtube: youtube.com
 
-# permalink: /blog/:categories/:title
-permalink: /blog/:year/:month/:day/:title 
+# permalink: /blog/:categories/:title 
+permalink: /blog/:year/:month/:day/:title     
 
 categories: 
   - tutorials
   - cheatsheets
-  - core basics
+  - core-basics
 
 tags: ["Git"]
 
@@ -26,4 +26,4 @@ archive:
   title: Blog Archive 
   
 paginate: 1
-paginate_path: "blog/page:num"
+paginate_path: "page/page:num"      
